# rust-canvas-prototype

./: .env  .gitignore  Cargo.toml  README.md  temp.toml
.cargo/: config.toml
src/: canvas_source.rs  lib.rs  main.rs  universe.rs  utils.rs
src/shaders/: fragment.glsl  vertex.glsl
www/: package-lock.json  package.json
www/src/: App.css  App.tsx
www/src/components/: DirectCanvas.module.css  DirectCanvas.tsx  GameCanvas.tsx  Greeter.tsx
www/src/hooks/: useCanvasContext.ts
